--- a/desafios/sitedogeba/estilos/style.css
+++ b/desafios/sitedogeba/estilos/style.css
@@ -1,5 +1,236 @@
 @charset "UTF-8";
 
+@import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Work+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+
+@font-face {
+    font-family: 'Batman';
+    src: url(../fontes/batmfa__.ttf) format(truetype);
+    font-weight: normal;
+}
+
+:root {
+    --cor0: #0FC2C0;
+    --cor1: #0CABA8;
+    --cor2: #008F8C;
+    --cor3: #015958;
+    --cor4: #023535;
+
+    --fonte-padrao: Arial, sans-serif;
+    --fonte-destaque: 'Bebas Neue', sans-serif;
+    --fonte-titulos: 'Batman', sans-serif;
+}
+
+* {
+    margin: 0px;
+    padding: 0px;
+}
+
+body {
+    background-color: var(--cor0);
+    font-family: var(--fonte-padrao);
+}
+
+a.externo::after {
+    content: '\00A0\1F517';
+}
+
+header {
+    background-image: linear-gradient(to bottom, var(--cor2), var(--cor4));
+    min-height: 150px;
+    text-align: center;
+    padding-top: 40px;
+}
+
+header > h1 {
+    color: white;
+    font-family: var(--fonte-destaque);
+    font-size: 3em;
+    padding-bottom: 20px;
+    text-shadow: 2px 2px 0px rgba(0, 0, 0, 0.281);
+}
+
+header > p {
+    color: white;
+    font-family: var(--fonte-padrao);
+    font-size: 1.2em;
+    margin: auto;
+    max-width: 500px;
+    padding-right: 10px;
+    padding-left: 10px;
+    margin-bottom: 20px;
+    text-shadow:  2px 0px rgba(0, 0, 0, 0.281);
+}
+
+nav {
+    background-color: var(--cor4);
+    padding: 10px;
+    text-shadow: 0px 0px 7px rgba(0, 0, 0, 0.315);
+}
+
+nav > a {
+    color: var(--cor1);
+    padding: 10px;
+    border-radius: 5px;
+    text-decoration: none;
+    font-weight: bold;
+    transition-duration: .5s;
+}
+
+nav > a:hover {
+    color: var(--cor3);
+    background-color: var(--cor2);
+}
+    
+
+
+main {
+    background-color: white;
+    min-width: 300px;
+    max-width: 1000px;
+    margin: auto;
+    margin-bottom: 30px;
+    padding: 20px;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.404);
+    border-bottom-left-radius: 10px;
+    border-bottom-right-radius: 10px;
+}
+
+main  h1 {
+    color: var(--cor4);
+    font-family: var(--fonte-titulos);
+    font-weight: normal;
+    font-size: 1.8em;
+}
+
+main  h2 {
+    color: var(--cor4);
+    font-family: var(--fonte-titulos);
+    font-weight: normal;
+    font-size: 1.3em;
+    text-indent: 8px;
+}
+
+main p {
+    margin: 15px 0px;
+    text-align: justify;
+    font-size: 1em;
+    text-indent: 30px;
+    line-height: 2em;
+}
+
+main strong {
+    color: var(--cor1);
+    font-weight: bold;
+    padding: 2px 6px;
+}
+
+main strong.geba {
+    color: var(--cor3);
+    font-weight: bold;
+    padding: 2px 6px;
+}
+
+main abbr {
+    text-decoration: none;   
+}
+
+main abbr:hover {
+    text-decoration: underline;
+}
+
+main a {
+    text-decoration: none;
+    font-weight: bold;
+    padding: 2px 6px;
+    color: var(--cor3);
+}
+
+main a:hover {
+    text-decoration: underline;
+    color: var(--cor4);
+}
+
+main img {
+    width: 30%;
+    
+}
+
+
+div.video {
+    margin: 0px -20px 30px -20px;
+    padding: 20px;
+    padding-bottom: 57%;
+    position: relative;
+}
+
+div.video > iframe {
+    position: absolute;
+    top: 5px;
+    left: 50px;
+    width: 90%;
+    height: 90%;
+}
+
+aside {
+    background-color: var(--cor4);
+    padding: 10px;
+    border-radius: 10px;
+    text-shadow: 3px 3px 8px rgba(0, 0, 0, 0.308);
+}
+
+aside > h3 {
+    color: white;
+    font-family: var(--fonte-titulos);
+    padding: 10px;
+    margin: -10px -10px 0px -10px;
+    border-radius: 10px 10px 0px 0px;
+}
+
+aside > p {
+    color: white;
+}
+
+aside strong {
+    color: white;
+}
+
+aside strong.geba {
+    color: var(--cor1);
+}
+
+aside a {
+    color: var(--cor1);
+}
+
+aside a:hover {
+    color: var(--cor2);
+}
+
+aside > ul {
+    list-style-type: "\2714\00A0\00A0";
+    list-style-position: inside;
+    columns: 2;
+    color: white;
+}
+
+footer {
+    background-color: var(--cor4);
+    color: white;
+    text-align: center;
+    font-size: 0.8em;
+    padding: 5px;
+}
+
+footer > a {
+    color: white;
+    text-decoration: none;
+    font-weight: bold;
+}
+
+footer a:hover {
+    color: var(--cor1);
+    text-decoration: underline;
+}
 
 
 
