--- a/desafios/d012/estilo/style.css
+++ b/desafios/d012/estilo/style.css
@@ -55,7 +55,11 @@ section {
     line-height: 2em;
     padding-left: 30px;
     font-family: var(--fonte3);
-    font-size: 3.5vw;
+    font-size: 3vw;
+}
+
+section > p {
+    padding-bottom: 2em;
 }
 
 section.normal {
@@ -66,12 +70,29 @@ section.normal {
 section.imagem {
     background-color: rgb(61, 59, 59);
     color: white;
+    box-shadow: inset 6px 6px 13px 0px rgba(0, 0, 0, 0.452);
+    background-size: cover;
+    background-attachment: fixed;
 }
 
 section.imagem > p {
     display: inline-block;
     background-color: rgba(0, 0, 0, 0.267);
     padding: 5px;
+}
+
+section#img01 {
+    background-image: url(../imagens/background001.jpg);
+    background-position: right center;
+    
+}
+
+
+section#img02 {
+    background-image: url(../imagens/background002.jpg);
+    background-position: right center;
+    text-shadow: 1px px 0px black;
+    
 }
 
 footer {
